<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/banner"
        android:scaleType="centerCrop"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_marginTop="@dimen/section_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        android:layout_marginHorizontal="@dimen/login_margin"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <EditText
            android:id="@+id/server_ip_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_login"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginHorizontal="@dimen/login_margin"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_login"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_margin"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password"/>

</android.support.constraint.ConstraintLayout>